# tp_app_backend

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  инструкция.txt
app/: config.py  database.py  main.py
app/admin/: auth.py  views.py
app/dao/: base.py
app/substation/: dao.py  models.py  router.py  schemas.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
app/users_tg/: dao.py  models.py  router.py  schemas.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 2bc1c2ed24f7_пользователю_добавил_флаг_access_bot.py  52ccef277019_create_table_tp_sres.py  6b5efb1ab198_initial_migration.py  75074c29dc80_add_table_users.py  9ba9d6c6fdbb_update_table_tp_sres_in_the_substation.py  d5779ea65346_добавил_огранчение_к_таблице_users.py  dd4f9cede49b_update_table_tp_sres.py
